--- a/css/master.css
+++ b/css/master.css
@@ -3084,6 +3084,9 @@ section.swish-userflows {
   section.swish-userflows .swish-userflow-box {
     grid-column-start: 2;
     grid-column-end: 3;
+    background-size: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: #232431; }
     @media (max-width: 768px) {
       section.swish-userflows .swish-userflow-box {
@@ -3114,6 +3117,9 @@ section.swish-sketches {
       section.swish-sketches .swish-sketch-title {
         grid-row: 1/2; } }
   section.swish-sketches .swish-sketch-box {
+    background-size: 80%;
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: #232431; }
 
 section.swish-mobile {
@@ -3134,7 +3140,7 @@ section.swish-br-box {
   margin: 0 0 1em 0;
   display: grid;
   width: 100%;
-  height: 2000px;
+  height: 2500px;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 100px repeat(4, 500px);
   grid-gap: 25px 25px; }
@@ -3156,7 +3162,10 @@ section.swish-br-box {
       section.swish-br-box .swish-browser-title {
         grid-column-start: 1;
         grid-column-end: 2; } }
-  section.swish-br-box .swish-browser1 {
+  section.swish-br-box .swish-browser {
+    background-position: center;
+    background-size: 78%;
+    background-repeat: no-repeat;
     background-color: #232431; }
 
 .swish-splash {
@@ -3185,6 +3194,48 @@ section.swish-br-box {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat; }
+
+#browser-cart {
+  background-image: url("../img/swish/browser/swish-browser-cart.png"); }
+
+#browser-delivery {
+  background-image: url("../img/swish/browser/swish-browser-delivery.png"); }
+
+#browser-item {
+  background-image: url("../img/swish/browser/swish-browser-item.png"); }
+
+#browser-notifications {
+  background-image: url("../img/swish/browser/swish-browser-notifications.png"); }
+
+#browser-orders {
+  background-image: url("../img/swish/browser/swish-browser-orders.png"); }
+
+#browser-profile {
+  background-image: url("../img/swish/browser/swish-browser-profile.png"); }
+
+#browser-sneakers {
+  background-image: url("../img/swish/browser/swish-browser-sneakers.png"); }
+
+#browser-wishlist {
+  background-image: url("../img/swish/browser/swish-browser-wishlist.png"); }
+
+#swish-us1 {
+  background-image: url("../img/swish/swish-us1.png"); }
+
+#swish-us2 {
+  background-image: url("../img/swish/swish-us2.png"); }
+
+#swish-sketch1 {
+  background-image: url("../img/swish/swish-sketch1.png"); }
+
+#swish-sketch2 {
+  background-image: url("../img/swish/swish-sketch2.png"); }
+
+#swish-sketch3 {
+  background-image: url("../img/swish/swish-sketch3.png"); }
+
+#swish-sketch4 {
+  background-image: url("../img/swish/swish-sketch4.png"); }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -3573,6 +3624,10 @@ section.milya-splash-box {
       grid-template-columns: 1fr;
       grid-template-rows: repeat(2, 100px) 400px; } }
   section.milya-splash-box .milya-splash {
+    background-image: url("../img/milya/milya-splash.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     grid-column-start: 1;
     grid-column-end: 4;
     background-color: #422FFA; }
