--- a/scss/_milya.scss
+++ b/scss/_milya.scss
@@ -21,6 +21,10 @@ section.milya-splash-box{
   .milya-title{}
   .milya-description{}
   .milya-splash{
+    background-image: url('../img/milya/milya-splash.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     grid-column-start: 1;
     grid-column-end: 4;
     background-color: $milya;
