--- a/scss/_swish.scss
+++ b/scss/_swish.scss
@@ -128,26 +128,69 @@ section.swish-process{
 }
 
 
-section.swish-personas{
-    padding-top: 1em;
-    border-top: 1px solid $default-text;
-    margin: 1em 0 1em 0;
-    display:grid;
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 600px;
-    grid-column-gap: 25px;
-    @include for-tablet-portait-up{
-      width: 95%;
-      grid-template-columns: 1fr;
-      grid-template-rows: 160px repeat(2, 600px);
-      grid-row-gap:25px;
+// section.swish-personas{
+//     padding-top: 1em;
+//     border-top: 1px solid $default-text;
+//     margin: 1em 0 1em 0;
+//     display:grid;
+//     width: 100%;
+//     grid-template-columns: repeat(3, 1fr);
+//     grid-template-rows: 600px;
+//     grid-column-gap: 25px;
+//     @include for-tablet-portait-up{
+//       width: 95%;
+//       grid-template-columns: 1fr;
+//       grid-template-rows: 160px repeat(2, 600px);
+//       grid-row-gap:25px;
+//     }
+//   aside.swish-persona-box{
+//     margin-bottom: 1em;
+//     width: 100%;
+//     height: 400px;
+//     background-color: $default-text;
+//   }
+// }
+
+
+section.swish-persona{
+  padding-top: 1em;
+  border-top: 1px solid $default-text;
+  margin: 1em 0 1em 0;
+  display:grid;
+  width: 100%;
+  height:625px;
+  grid-template-columns: 2fr repeat(2,1.9fr);
+  grid-template-rows: 625px;
+  grid-column-gap: 25px;
+  .swish-title{
+    grid-column-start: 1;
+    grid-column-end:2;
+  }
+  .swish-persona-box{
+    display:flex;
+    flex-direction: column;
+    background-color: $white;
+    z-index: 20;
+    -webkit-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    -moz-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    .swish-persona-image{
+      height:400px;
+      width: 100%;
+      //border:1px solid red;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
-  aside.swish-persona-box{
-    margin-bottom: 1em;
-    width: 100%;
-    height: 400px;
-    background-color: $default-text;
+    .swish-persona-description{
+      //border:1px solid blue;
+      width:100%;
+      height:70%;
+      padding: 1em 1.5em 1em 1.5em;
+      li{
+        margin: 0.5em 0.5em 0;
+      }
+    }
   }
 }
 
@@ -178,6 +221,29 @@ section.swish-userflows{
     @include for-tablet-portait-up{
       grid-column: 1/2;
     }
+  }
+}
+
+
+section.swish-product-map{
+  padding-top:1em;
+  display: grid;
+  border-top: 1px solid $default-text;
+  margin: 1em 0 3em 0;
+  width:100%;
+  height: 925px;
+  grid-template-columns: 1fr;
+  grid-row-gap:25px;
+  grid-template-rows: 100px 800px;
+  .swish-title{
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .swish-product-box{
+    //border:1px solid red;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 }
 
@@ -296,12 +362,12 @@ section.swish-prototypes{
 }
 
  //--- Backgrounds & Images ----///
-// .swish-splash{
-//   background-image:url(../img/swish/swish-splash.jpg);
-//   background-size:cover;
-//   background-position: center;
-//   background-repeat: no-repeat;
-// }
+.swish-splash{
+background-image:url(../img/swish/swish-splash.jpg);
+background-size:cover;
+ background-position: center;
+  background-repeat: no-repeat;
+}
 // .swish-screen1{
 //   grid-area:swish_screen1;
 //   background-image:url(../img/swish/swish-screen1.png);
@@ -413,6 +479,24 @@ section.mobile-cart{
 }
 
 
+//--Splashbox---//
+#swish-splash{
+  background-image: url('../img/swish/swish-splash.jpg');
+}
+
+
+//---Personas---//
+#persona-david{
+  background-image: url('../img/swish/persona-david.png');
+}
+#persona-crystal{
+  background-image:url('../img/swish/persona-crystal.png');
+}
+
+//--Product Map --//
+#swish-product-map{
+  background-image:url('../img/swish/swish-product-map.png');
+}
 
 //---Mobile---//
 #swish-mobile-onboard1{
