--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -155,6 +155,9 @@ p{
   font-size: 18px;
   margin: 0;
   font-weight: lighter;
+  @include for-tablet-portait-up{
+    font-size: 16px;
+  }
 }
 
 li.biolist{
