--- a/scss/_milya.scss
+++ b/scss/_milya.scss
@@ -22,7 +22,7 @@ section.milya-splash-box{
   .milya-description{}
   .milya-splash{
     background-image: url('../img/milya/milya-splash.png');
-    background-size: contain;
+    background-size: 75%;
     background-position: center;
     background-repeat: no-repeat;
     grid-column-start: 1;
