--- a/scss/_swish.scss
+++ b/scss/_swish.scss
@@ -55,12 +55,10 @@ section.swish-introduction{
     @include for-tablet-portait-up{
       border: none;
     }
-    //background-color: $link-active;
   }
   .swish-inspiration-title{
     padding-top: 1em;
     border-top: 1px solid $default-text;
-    //background-color: $link-hover;
     @include for-tablet-portait-up{
       border: none;
     }
@@ -71,7 +69,6 @@ section.swish-introduction{
     @include for-tablet-portait-up{
       border: none;
     }
-    //background-color: $illustration-salmon;
   }
   .swish-inspiration-para{
     padding-top: 1em;
@@ -79,7 +76,6 @@ section.swish-introduction{
     @include for-tablet-portait-up{
       border: none;
     }
-    //background-color: $illustration-purple;
   }
 }
 section.swish-process{
@@ -104,7 +100,6 @@ section.swish-process{
     grid-row-gap:25px;
     }
   .process-title{
-    //background-color: $link-active;
     grid-column-start: 1;
     grid-column-end: 4;
     @include for-tablet-portait-up{
@@ -113,8 +108,6 @@ section.swish-process{
     }
   }
   .swish-process-box{
-      //border: 1px solid red;
-      //background-color: $link-active;
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
@@ -133,21 +126,42 @@ section.swish-problems{
   margin: 1em 0 1em 0;
   display:grid;
   width: 100%;
-  height:625px;
+  height:575px;
   grid-template-columns: 3fr 4fr;
   grid-template-rows: 1fr;
-  grid-column-gap: 25px;
+  grid-column-gap: 15px;
+  @include for-tablet-portait-up{
+    width: 95%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100px 500px;
+    grid-row-gap: 20px;
+    height:540px;
+  }
+  @include for-phone-only{
+    height: 680px;
+  }
   .swish-title{
     grid-column-start: 1;
     grid-column-end: 2;
+    @include for-tablet-portait-up{
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
   }
   .swish-problem-box{
     grid-column-start: 2;
     grid-column-end: 3;
+    @include for-tablet-portait-up{
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
     li{
       margin: 1.5em 0 1.5em 0;
       padding: 0.5em 0 0.5em 0;
       border-bottom: 1px solid $default-text;
+      @include for-tablet-portait-up{
+        border-bottom: 0.25px solid $default-text;
+      }
     }
   }
 }
@@ -160,13 +174,34 @@ section.swish-solutions{
   height:950px;
   grid-template-columns: 3fr  4fr;
   grid-template-rows: 1fr;
+  @include for-tablet-portait-up{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 80px 600px;
+    height: 800px;
+    grid-row-gap: 35px;
+    width: 95%;
+  }
+  @include for-phone-only{
+    height:975px;
+  }
   .swish-title{
     grid-column-start: 1;
     grid-column-end: 2;
+    @include for-tablet-portait-up{
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
   }
   .swish-solutions-box{
+    @include for-tablet-portait-up{
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
     li{
       margin: 2.5em 0 2.5em 0;
+      @include for-tablet-portait-up{
+        margin:1.5em 0 1.5em 0;
+      }
     }
   }
 }
@@ -189,6 +224,7 @@ section.swish-persona{
     height:750px;
     grid-column-gap: 15px;
   }
+
   @include for-phone-only{
     grid-template-rows: 80px 525px 525px;
     grid-template-columns: 1fr;
@@ -204,7 +240,6 @@ section.swish-persona{
     }
   }
   .swish-persona-box{
-
     display:flex;
     flex-direction: column;
     background-color: $white;
@@ -348,6 +383,14 @@ section.swish-low{
   height: 800px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 100px 1fr;
+  @include for-tablet-portait-up{
+    grid-template-rows: 100px 500px;
+    height: 625px;
+    width:95%;
+  }
+  @include for-phone-only{
+    grid-row-gap:25px;
+  }
   .swish-title{
     grid-column-start: 1;
     grid-column-end: 3;
@@ -362,6 +405,10 @@ section.swish-low{
     -webkit-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
     -moz-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    @include for-tablet-portait-up{
+      background-size: 85%;
+    }
+    @include for-phone-only{}
   }
 }
 
@@ -433,34 +480,8 @@ background-size:cover;
  background-position: center;
   background-repeat: no-repeat;
 }
-// .swish-screen1{
-//   grid-area:swish_screen1;
-//   background-image:url(../img/swish/swish-screen1.png);
-//   background-size:contain;
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   //background-color: $background-grey;
-// }
-// .swish-wishlist{
-//   grid-area:swish_wishlist;
-//   background-image:url(../img/swish/swish-wishlist.png);
-//   background-size:contain;
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   //background-color: $background-grey;
-// }
-// .swish-delivery{
-//   grid-area:swish_delivery;
-//   background-image:url(../img/swish/swish-delivery.png);
-//   background-size:contain;
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   //background-color: $background-grey;
-// }
-
 
 .swish-mobile-card{
-  //border:1px solid red;
   background-size:42%;
   background-position-y: 75%;
   background-position-x:center;
