--- a/css/master.css
+++ b/css/master.css
@@ -5532,7 +5532,7 @@ section.nike-grid {
   border-top: 1px solid #232431;
   display: grid;
   width: 100%;
-  height: 3380px;
+  height: 2880px;
   grid-gap: 25px 25px;
   grid-template-columns: auto;
   grid-template-rows: repeat(8, 400px); }
@@ -5607,7 +5607,10 @@ section.nike-grid {
     @media (max-width: 768px) {
       section.nike-grid .nike-box-l1 {
         grid-column: 1/2;
-        grid-row: 3/5; } }
+        grid-row: 3/4; } }
+    @media (max-width: 425px) {
+      section.nike-grid .nike-box-l1 {
+        grid-row: 3/4; } }
   section.nike-grid .nike-box-l2 {
     grid-column: 1/3;
     grid-row: 7/9;
@@ -5616,6 +5619,44 @@ section.nike-grid {
       section.nike-grid .nike-box-l2 {
         grid-column: 1/2;
         grid-row: 7/8; } }
+
+.nike-screen-img {
+  background-position: center;
+  background-size: 75%;
+  background-repeat: no-repeat; }
+  @media (max-width: 768px) {
+    .nike-screen-img {
+      background-size: 70%; } }
+  @media (max-width: 425px) {
+    .nike-screen-img {
+      background-size: 90%; } }
+
+#nike-screen1 {
+  background-image: url("../img/nike/screens/nike-screen1.png"); }
+
+#nike-screen2 {
+  background-image: url("../img/nike/screens/nike-screen2.png"); }
+
+#nike-screen3 {
+  background-image: url("../img/nike/screens/nike-screen3.png"); }
+
+#nike-screen4 {
+  background-image: url("../img/nike/screens/nike-screen4.png"); }
+
+#nike-screen5 {
+  background-image: url("../img/nike/screens/nike-screen5.png"); }
+
+#nike-screen6 {
+  background-image: url("../img/nike/screens/nike-screen6.png"); }
+
+#nike-screen7 {
+  background-image: url("../img/nike/screens/nike-screen7.png"); }
+
+#nike-screen8 {
+  background-image: url("../img/nike/screens/nike-screen8.png"); }
+
+#nike-screen9 {
+  background-image: url("../img/nike/screens/nike-screen9.png"); }
 
 html {
   background-color: #F7F7F7;
