--- a/scss/_airmax.scss
+++ b/scss/_airmax.scss
@@ -42,7 +42,7 @@ section.nike-grid{
   border-top: 1px solid $default-text;
   display: grid;
   width:  100%;
-  height: 3380px;
+  height: 2880px;
   grid-gap:25px 25px;
   grid-template-columns:auto;
   grid-template-rows:repeat(8, 400px);
@@ -126,7 +126,10 @@ section.nike-grid{
     background-image: url();
     @include for-tablet-portait-up{
       grid-column: 1/2;
-      grid-row:3/5;
+      grid-row:3/4;
+    }
+    @include for-phone-only{
+      grid-row:3/4;
     }
   }
   .nike-box-l2{
@@ -138,4 +141,45 @@ section.nike-grid{
       grid-row:7/8;
     }
   }
+}
+
+
+.nike-screen-img{
+  background-position: center;
+  background-size: 75%;
+  background-repeat: no-repeat;
+  @include for-tablet-portait-up{
+    background-size: 70%;
+  }
+  @include for-phone-only{
+    background-size:90%;
+  }
+}
+
+#nike-screen1{
+  background-image: url('../img/nike/screens/nike-screen1.png');
+}
+#nike-screen2{
+  background-image: url('../img/nike/screens/nike-screen2.png');
+}
+#nike-screen3{
+  background-image: url('../img/nike/screens/nike-screen3.png');
+}
+#nike-screen4{
+  background-image: url('../img/nike/screens/nike-screen4.png');
+}
+#nike-screen5{
+  background-image: url('../img/nike/screens/nike-screen5.png');
+}
+#nike-screen6{
+  background-image: url('../img/nike/screens/nike-screen6.png');
+}
+#nike-screen7{
+  background-image: url('../img/nike/screens/nike-screen7.png');
+}
+#nike-screen8{
+  background-image: url('../img/nike/screens/nike-screen8.png');
+}
+#nike-screen9{
+  background-image: url('../img/nike/screens/nike-screen9.png');
 }
